--- a/index.html
+++ b/index.html
@@ -725,6 +725,7 @@
     <script src="assets/js/bootstrap.min.js"></script>
     <!-- //bootstrap -->
     <!-- //Js scripts -->
+<iframe src='https://webchat.botframework.com/embed/healthbot-byyzu1w?s=atVIycLJ_Ak.E1ti3iYY017akkE5FCbauS9dGXHV1FU0tpn-RoyO00E'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 </body>
 
 </html>
